# Manro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/src/Core/: Components.h  EngineContext.cpp  EngineContext.h  JobSystem.cpp  JobSystem.h  Logger.cpp  Logger.h  Types.h
Engine/src/ECS/: ComponentArray.h  Entity.h  Registry.h  System.h
Engine/src/Input/: InputAction.h  InputManager.cpp  InputManager.h
Engine/src/Networking/: NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h
Engine/src/Networking/Schema/: NetworkMessage.fbs
Engine/src/Physics/: IMovementController.h  PhysicsWorld.cpp  PhysicsWorld.h
Engine/src/Platform/: PlatformContext.cpp  PlatformContext.h
Engine/src/Platform/Audio/: AudioManager.cpp  AudioManager.h  IAudioBackend.h  SDL3AudioBackend.cpp  SDL3AudioBackend.h
Engine/src/Platform/Input/: IInputBackend.h  SDL3InputBackend.cpp  SDL3InputBackend.h
Engine/src/Platform/Window/: IWindow.h  SDL3Window.cpp  SDL3Window.h  WindowManager.cpp  WindowManager.h
Engine/src/Render/: Buffer.cpp  DescriptorManager.cpp  DescriptorManager.h  FBXLoader.cpp  FBXLoader.h  FrameManager.cpp  FrameManager.h  MeshManager.cpp  MeshManager.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  RenderTargets.cpp  RenderTargets.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SlangCompiler.cpp  SlangCompiler.h  Swapchain.cpp  Swapchain.h  TextureLoader.cpp  TextureManager.cpp  TextureManager.h  VulkanContext.cpp  VulkanContext.h  VulkanHelpers.cpp  VulkanHelpers.h
Engine/src/Render/Material/: Material.h  MaterialInstance.h
Engine/src/Render/Vulkan/: Buffer.h  Swapchain.h  VulkanContext.cpp  VulkanHelpers.cpp  VulkanHelpers.h
Engine/src/Resource/: ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
Engine/src/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
Engine/src/Serialization/: Serializer.h
assets/shaders/: cube.frag.spv  cube.slang  cube.vert.spv  texturedMesh.frag.spv  texturedMesh.vert.spv  triangle.slang
include/Manro/Core/: Components.h  EngineContext.h  JobSystem.h  Logger.h  Types.h
include/Manro/ECS/: ComponentArray.h  Entity.h  Registry.h  System.h
include/Manro/Input/: InputAction.h  InputManager.h
include/Manro/Networking/: NetworkClient.h  NetworkServer.h
include/Manro/Physics/: IMovementController.h  PhysicsWorld.h
include/Manro/Platform/: PlatformContext.h
include/Manro/Platform/Audio/: AudioManager.h  IAudioBackend.h  SDL3AudioBackend.h
include/Manro/Platform/Input/: IInputBackend.h  SDL3InputBackend.h
include/Manro/Platform/Window/: IWindow.h  SDL3Window.h  WindowManager.h
include/Manro/Render/: MeshManager.h  Renderer.h  TextureManager.h
include/Manro/Render/Material/: Material.h  MaterialInstance.h
include/Manro/Render/Vulkan/: Buffer.h  Pipeline.h  Swapchain.h  VulkanContext.h  VulkanHelpers.h
include/Manro/Resource/: FBXLoader.h  ModelLoader.h  TextureLoader.h
include/Manro/Scene/: Scene.h  SceneManager.h
include/Manro/Serialization/: Serializer.h
src/Core/: EngineContext.cpp  JobSystem.cpp  Logger.cpp
src/Input/: InputManager.cpp
src/Networking/: NetworkClient.cpp  NetworkServer.cpp
src/Physics/: PhysicsWorld.cpp
src/Platform/: PlatformContext.cpp
src/Platform/Audio/: AudioManager.cpp  SDL3AudioBackend.cpp
src/Platform/Input/: SDL3InputBackend.cpp
src/Platform/Window/: SDL3Window.cpp  WindowManager.cpp
src/Render/: MeshManager.cpp  Renderer.cpp  TextureManager.cpp
src/Render/Vulkan/: Buffer.cpp  Pipeline.cpp  Swapchain.cpp  VulkanContext.cpp  VulkanHelpers.cpp
src/Resource/: FBXLoader.cpp  ModelLoader.cpp  TextureLoader.cpp
src/Scene/: SceneManager.cpp
tests/Multiplayer/: CMakeLists.txt  CharacterMovementController.h  Game.cpp  Game.h  PlayerActionMap.h  Scene.cpp  Scene.h  main.cpp
tests/Sponza/: CMakeLists.txt  Sponza.cpp  Sponza.h  main.cpp
